test/libsolidity/syntaxTests/constants/non_constant.sol
uint x = 7;
// ----
// DeclarationError 8342: (0-10): Only constant variables are allowed at file level.
